# gpt-resolve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
exams/ita_2025/: report.md
exams/ita_2025/chemistry/essays/solutions/: q10_solution.txt  q1_solution.txt  q2_solution.txt  q3_solution.txt  q4_solution.txt  q5_solution.txt  q6_solution.txt  q7_solution.txt  q8_solution.txt  q9_solution.txt
exams/ita_2025/math/essays/: descriptions.txt  solutions.txt
exams/ita_2025/math/essays/solutions/: q1_solution.txt  q2_solution.txt  q3_solution.txt  q4_solution.txt  q6_solution.txt  q7_solution.txt  q8_solution.txt
exams/ita_2025/math/essays/solutions/o1/: q10_solution.txt  q1_solution.txt  q2_solution.txt  q3_solution.txt  q4_solution.txt  q5_solution.txt  q6_solution.txt  q7_solution.txt  q8_solution.txt  q9_solution.txt
exams/ita_2025/math/essays/solutions/o1_preview/: q10_solution.txt  q10_solution_rerun.txt  q1_solution.txt  q5_solution.txt  q9_solution.txt
exams/ita_2025/math/essays/solutions/o3/: q10_solution.txt  q1_solution.txt  q2_solution.txt  q3_solution.txt  q4_solution.txt  q5_solution.txt  q6_solution.txt  q7_solution.txt  q8_solution.txt  q9_solution.txt
exams/ita_2025/physics/essays/solutions/: q10_solution.txt  q1_solution.txt  q2_solution.txt  q3_solution.txt  q4_solution.txt  q5_solution.txt  q6_solution.txt  q7_solution.txt  q8_solution.txt  q9_solution.txt
src/: resolve.py  utils.py
src/gpt_resolve/: pdf_generator.py  resolve.py  utils.py
tests/: conftest.py  test_pdf_generator.py  test_resolve.py  test_utils.py
(+10 files in other folders)
