[tool.poetry]
name = "gpt-resolve"
version = "0.1.0"
description = "GPT solutions for Brazilian university entrance exams."
authors = ["Luan Fernandes <luangabriel70@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.3"
python-dotenv = "^1.0.1"
pylatex = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
